<resources>
    <string name="app_name">Input2ESP</string>
    <string name="app_repo_url" translatable="false">https://github.com/Drumber/Input2ESP</string>

    <!-- kp2a plugin information -->
    <string name="kp2aplugin_title" translatable="false">Input2ESP</string>
    <string name="kp2aplugin_shortdesc">Send credentials from KP2A to your PC using Wifi enabled HID injectors like Cactus WHID, Wifi Duck or similar.</string>
    <string name="kp2aplugin_author" translatable="false">Drumber</string>

    <!-- Fragment title -->
    <string name="title_main_fragment">Home</string>
    <string name="title_main_fragment_select">Select Device</string>
    <string name="title_send_fragment">Send Payload</string>
    <string name="title_send_fragment_credentials">Send Credentials</string>
    <string name="title_edit_payload">Edit Payload</string>
    <string name="title_esp_device_setup_fragment">ESP Device Setup</string>
    <string name="title_settings_fragment">Settings</string>

    <!-- Action texts -->
    <string name="action_send_to_esp">Send to ESP</string>
    <string name="action_send">Send</string>
    <string name="settings">Settings</string>
    <string name="action_clear_list">Clear list</string>
    <string name="action_add_device">Add device</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_discard">Discard</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_discover_devices">Discover devices</string>

    <!-- Device Network States -->
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_offline">Offline</string>
    <string name="state_online">Online</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_connectionlost">Connection lost</string>
    <string name="state_failed">Failed</string>
    <string name="state_message_received">Message received</string>

    <!-- Error messages -->
    <string name="error_device_exists">Device already exists.</string>
    <string name="error_not_configured">Not configured</string>
    <string name="error_unnamed_device">Unnamed device</string>
    <string name="error_empty_payload">Empty command</string>
    <string name="error_no_commands">No commands specified.</string>
    <string name="error_device_not_found">Device not found.</string>
    <string name="error_invalid_address_port">Invalid network address or port.</string>
    <string name="error_network_connection_timeout">Connection timed out.</string>
    <string name="error_network_unsupported_address">Unsupported socket address.</string>
    <string name="error_network_cannot_connect">Cannot connect to server.</string>
    <string name="error_network_regular_error">Network error.</string>
    <string name="error_network_connection_lost">Lost connection to the server.</string>

    <!-- Content descriptions -->
    <string name="desc_fab_add_device">Add new device</string>
    <string name="desc_edit_device">Edit device</string>
    <string name="desc_delete_device">Delete device</string>
    <string name="desc_insert_placeholder">Insert Placeholder</string>

    <!-- Headlines and Subtitles -->
    <string name="headline_set_up_device">Set up device</string>
    <string name="subtitle_add_new_device_manually">Add new device manually</string>
    <string name="headline_empty_device_list">There are no devices</string>
    <string name="subtitle_empty_device_list">Click on + to add a new device.</string>

    <!-- ESP device set up -->
    <string name="field_device_name">Device name</string>
    <string name="field_device_hostname_ip">Hostname / IP</string>
    <string name="field_device_port">Port</string>
    <string name="field_protocol_mode">Protocol Mode</string>
    <string name="info_esploitv2_delay">Make sure that the <b>Live Payload Delay</b> is set to 0 in the ESPloitV2 settings.</string>
    <string name="message_device_saved">Device saved.</string>

    <!-- Send Payload -->
    <string name="description_send_payload">Send payload to the device</string>
    <string name="message_sending_data">Sending data, please wait…</string>
    <string name="desc_drag_to_reorder">Drag to reorder</string>
    <string name="action_add_command">Add Command</string>

    <!-- Edit Command -->
    <string name="field_payload">Payload</string>
    <string name="field_command_type">Command Type</string>
    <string name="field_command_delay">Command Delay</string>
    <string name="field_command_delay_helper">Delay in ms before sending the command</string>
    <string name="description_reset_command_delay">Reset to default command delay.</string>
    <string name="title_placeholders">Placeholders</string>
    <string name="field_search_placeholders">Search placeholders</string>

    <string name="placeholder_category_others">Others</string>
    <string name="placeholder_category_kp2a">Keepass2Android</string>
    <string name="placeholder_category_date">Date &amp; Time</string>
    <string name="placeholder_category_keys">Modifier Keys</string>

    <!-- Settings -->
    <string name="category_appearance">Appearance</string>
    <string name="category_network">Network</string>
    <string name="category_payload_commands">Payload Commands</string>
    <string name="category_about">About</string>
    <string name="preference_theme">Theme</string>
    <string-array name="preference_theme_types">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow System</item>
        <item>Battery Saver</item>
    </string-array>
    <string name="preference_auto_discovery">Auto Discovery</string>
    <string name="preference_auto_discovery_description">Automatically search for online and new devices.</string>
    <string name="preference_enter_after_credentials">Press enter after credentials</string>
    <string name="preference_enter_after_credentials_description">Change whether the enter key should be pressed when sending credentials from keepass2android.</string>
    <string name="preference_default_command_delay">Default command delay</string>
    <string name="preference_app_version_info">App version</string>
    <string name="preference_app_repo_info">GitHub Repository</string>
    <string name="preference_placeholder_closures">Placeholder Closures</string>
    <string name="preference_placeholder_clear_search_on_select">Clear search after placeholder selection</string>
    <string name="preference_placeholder_clear_search_on_select_description">Clear the search after selecting a placeholder.</string>

    <!-- Preference Keys DO NOT CHANGE -->
    <string name="pref_file_key" translatable="false">settings</string>
    <string name="prefkey_theme" translatable="false">app_theme</string>
    <string name="prefkey_auto_discovery" translatable="false">auto_discovery</string>
    <string name="prefkey_enter_after_credentials" translatable="false">enter_after_credentials</string>
    <string name="prefkey_default_command_delay" translatable="false">default_command_delay</string>
    <string name="prefkey_app_version_info" translatable="false">app_version_info</string>
    <string name="prefkey_app_repo_info" translatable="false">app_repo_info</string>
    <string name="prefkey_placeholder_closures" translatable="false">placeholder_closures</string>
    <string name="prefkey_placeholder_clear_search_on_select" translatable="false">placeholder_clear_search_on_select</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete_device">Delete Device</string>
    <string name="dialog_message_delete_device">Are you sure you want to remove this device?</string>
    <string name="dialog_title_clear_device_list">Clear List</string>
    <string name="dialog_message_clear_device_list">Are you sure you want to delete all devices?</string>
    <string name="dialog_title_save_changes">Discard Changes</string>
    <string name="dialog_message_save_changes">Do you want to save the changes?</string>

</resources>