<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_file_key">

    <PreferenceCategory
        android:title="@string/category_appearance">

        <ListPreference
            android:key="@string/prefkey_theme"
            android:title="@string/preference_theme"
            android:entries="@array/preference_theme_types"
            android:entryValues="@array/preference_theme_values"
            android:defaultValue="-1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_network">

        <SwitchPreference
            android:key="@string/prefkey_auto_discovery"
            android:title="@string/preference_auto_discovery"
            android:summary="@string/preference_auto_discovery_description"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>