<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings" />

    <item android:id="@+id/menu_add_device"
        android:title="@string/action_add_device"
        app:showAsAction="never"
        android:icon="@drawable/ic_plus" />

    <item android:id="@+id/menu_clear_list"
        android:title="@string/action_clear_list"
        app:showAsAction="never"
        android:icon="@drawable/ic_clear_all" />

    <item android:id="@+id/menu_discover_devices"
        android:title="@string/action_discover_devices"
        app:showAsAction="never"
        android:icon="@drawable/ic_refresh" />

</menu>