<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:transitionName="device_item_transition"
    tools:context=".ui.send.SendFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <RelativeLayout
            android:id="@+id/device_control_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/device_connect_button">

                <TextView
                    android:id="@+id/device_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="end"
                    tools:text="Device Name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/device_description_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="end"
                    tools:text="Type 192.168.178.3:8080"
                    android:textAppearance="@style/TextAppearance.App.Secondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/device_state_imageView"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:src="@drawable/filled_circle"
                        app:tint="@color/state_offline"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/device_state_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        tools:text="Offline"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/device_connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_connect"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>

        <View
            android:id="@+id/control_separator_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?attr/colorControlHighlight"
            android:layout_below="@id/device_control_layout"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/body_nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            android:layout_below="@id/control_separator_view"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/payload_command_recyclerView"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_command_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/action_add_command" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/description_send_payload"
        android:text="@string/action_send"
        app:icon="@drawable/ic_send"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>